# message_enum_rs

./: Cargo.toml  LICENSE  README.md  build_start_all_debug.sh
src/: constants.rs  game_client.rs  human_client.rs  lib.rs  message_traits.rs  messages.rs  messaging_service.rs  pet_client.rs  server.rs  thread_pool.rs
src/executables/: server.rs
src/executables/clients/: game_client.rs  human_client.rs  pet_client.rs
src/message_traits/: serializable.rs
src/messages/: message_types.rs  messaging_service.rs
src/messages/message_types/: message_constants.rs  message_id.rs  message_structs.rs
src/messages/message_types/message_structs/: game_message.rs  human_message.rs  message_traits.rs  pet_message.rs
src/messages/message_types/message_structs/message_traits/: serializable.rs
src/messages/message_types/message_structs/pet_message/: pet_class.rs
src/messages/messaging_service/: message_serialization.rs  sending_client.rs
src/messaging_service/: sending_client.rs
