[package]
name = "message_enum"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "server"
path = "src/executables/server.rs"

[[bin]]
name = "human_client"
path = "src/executables/clients/human_client.rs"

[[bin]]
name = "pet_client"
path = "src/executables/clients/pet_client.rs"

[[bin]]
name = "game_client"
path = "src/executables/clients/game_client.rs"

[dependencies]

rand = "0.8"